--- a/_posts/2019-01-27-robert.md
+++ b/_posts/2019-01-27-robert.md
@@ -1,10 +1,9 @@
 ---
 layout: post
-title: "Hello World!"
+title: "Product manager - Robert"
 description: "The first 'Hello world' post for Simple Texture theme."
 categories: [uncategorized]
 tags: [random, jekyll]
 redirect_from:
-  - /2013/04/22/
 ---
 Hello World! This is the beginning of this theme.
