--- a/_posts/2019-01-27-Nao.md
+++ b/_posts/2019-01-27-Nao.md
@@ -7,10 +7,19 @@ redirect_from:
 * Kramdown table of contents
 {:toc .toc}
 
-# Nao Yamato
+# Nao
+![nao_headshot]( "nao_headshot")
 ~~~~~~~~~~~~
 ~~~~~~~
 Software Engineer
 Digital Product School Bach #9
 ~~~~~~~~
 ~~~~~~~~~~~~~~~~~~
+
+~~~ python
+countries = ['U.S.A.', 'U.K.', 'France', 'Australia', 'Vietnam', 'Malaysia', 'Singapore', 'Thailand', 'South Korea', 'China', 'Germany']
+for i in range(len(countries)):
+  print('my favourite programming language is')
+~~~
+
+# Topic
