--- a/_posts/2019-01-27-Nao.md
+++ b/_posts/2019-01-27-Nao.md
@@ -19,10 +19,18 @@ Digital Product School Bach #9
 ~~~~~~~~~~~~~~~~~~
 
 ~~~ python
-countries = ['U.S.A.', 'U.K.', 'France', 'Australia', 'Vietnam', 'Malaysia', 'Singapore', 
+countries = ['U.S.A.', 'U.K.', 'France', 'Vietnam', 'Malaysia', 'Singapore', 
 'Thailand', 'South Korea', 'China', 'Germany']
-for i in range(len(countries)):
+for i in range(len(countries)/2):
   print('my favourite programming language is')
+~~~
+
+~~~
+my favourite programming language is Python
+my favourite programming language is JavaScript
+my favourite programming language is Node.js
+my favourite programming language is XML
+my favourite programming language is SQL
 ~~~
 
 # Topic
