--- a/_posts/2019-01-27-Patricia.md
+++ b/_posts/2019-01-27-Patricia.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Interaction Designer -Patricia"
+title: "Interaction Designer -Patriciaw"
 description: "The first 'Hello world' post for Simple Texture theme."
 categories: [uncategorized]
 tags: [random, jekyll]
